public/styles/style.css
* {
  box-sizing: border-box;
}

:root {
  --swap-background: #313738;
  --swap-primary: #e38c18;
  --swap-secondary: #e2bd84;
  --swap-letters: #181b1c;
}

body,
html {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: sans-serif;
  color: var(--swap-letters);
  background-color: var(--swap-background);
}

a {
  text-decoration: none;
  color: var(--swap-primary);
  font-weight: bold;
  transition: color 0.1s;
}

a:hover {
  color: var(--swap-secondary);
}

.post-link {
  color: var(--swap-background);
}

.post-link:hover {
  color: var(--swap-secondary);
}

li:nth-child(odd) .post-link:hover {
  color: var(--swap-primary)
}

button {
  background-color: var(--swap-primary);
  border: 0;
  padding: .75rem 1rem;
  color: var(--swap-letters);
  font-weight: bold;
  transition: background-color 0.1s;
  cursor: pointer;
  border-radius: 5px;
}

button:hover {
  background-color: var(--swap-secondary);
}

form button {
  margin: 1rem 0 0 0;
}

.post-list {
  margin: 0;
  padding: 0;
}

ol {
  list-style-type: none;
}

li {
  border: 2px solid var(--blink-peach);
  margin: 10px 0;
  padding: 0 10px;
  border-radius: 10px;
}

textarea,
input,
.comment {
  padding: 0.5%;
  border-radius: 5px;
  border: 1px solid #ccc;
  margin: 1rem 0;
  width: 100%;
}

#item-details {
  display: flex;
}

#item-details > div {
  width: 50%;
  margin: 0 1rem 0 0;
}

textarea:focus,
input:focus {
  outline: none;
  border: 1px solid var(--swap-secondary);
}

textarea {
  min-width: 40%;
  min-height: 100px;
}

form > div {
  margin-bottom: 2%;
}

form label {
  display: block;
}

.wrapper {
  width: 100%;
  min-height: 100%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

header {
  border-bottom: 1px solid var(--swap-secondary);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1%;
  top: 0;
  position: sticky;
  background: var(--swap-background);
}

header h1,
footer h1 {
  font-size: 2em;
  font-family: "Permanent Marker", cursive;
  color: var(--swap-primary);
}

header h1 span,
footer h1 span {
  color: var(--swap-secondary);
}

nav {
  display: flex;
  justify-content: space-between;
}

main {
  flex: 1;
  padding: 2% 4%;
}

label {
  color: var(--swap-primary);
}

article.item,
section.items {
  background: var(--swap-primary);
  margin: 1rem;
  padding: 1rem;
  border-radius: 0.5em;
  width: 50%;
}

ul {
  list-style-type: none;
}

li {
  display: flex;
}

h1, 
h2 {
  color: var(--swap-primary);
}

.form {
  width: 25%;
  margin: 0 auto 3rem auto;
}

.form button {
  margin: 0;
}

#object-wrapper, 
#post-wrapper {
  width: 50%;
  margin: 1rem;
}

.btn-no-style {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  text-decoration: none;
  color: var(--swap-primary);
  font-size: 100%;
  font-weight: bold;
  transition: color 0.1s;
  margin-left: 16px;
}

.btn-no-style:hover {
  background: none;
  color: var(--swap-secondary);
}

.delete-post-btn {
  background-color: #d41414;
  color: var(--swap-primary);
}

.delete-post-btn:hover {
  background-color: var(--swap-secondary);
}

.post {
  margin-bottom: 2%;
  line-height: 150%;
}

.post {
  background-color: var(--swap-primary);
  border-radius: 1em;
}

.post .title {
  background-color: var(--swap-secondary);
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}

.post .title span {
  font-style: italic;
  font-size: 90%;
  color: #7d7d7d;
}

.post .meta {
  margin-left: 16px;
}

.edit-link {
  margin: -1.5% 0 2% 0;
}

.comment-form {
  margin-bottom: 5%;
}

.comment {
  padding: 1%;
  margin-bottom: 1%;
}

.comment:nth-child(odd), 
li:nth-child(odd) .item, 
li:nth-child(odd) .items {
  background-color: var(--swap-secondary);
}

.comment .meta {
  font-size: 90%;
  margin-bottom: 0.5%;
  opacity: 0.6;
}

#content-wrapper {
  display: flex;
}

.edit-post-form {
  margin-bottom: 5%;
}

footer {
  border-top: 1px solid var(--swap-secondary);
  display: flex;
  justify-content: center;
  padding: 1%;
}

footer h1 {
  font-size: 1em;
}

